just changed the txt file name

--- a/python_notebook.ipynb
+++ b/python_notebook.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "code",
       "source": [
-        "txt_filename = 'plagiarism_data.txt'  # your uploaded txt file\n",
+        "txt_filename = 'train_snli.txt'  # your uploaded txt file\n",
         "csv_filename = 'plagiarism_data.csv'  # we'll save it as this"
       ],
       "metadata": {
